--- a/unison-backend/package.json
+++ b/unison-backend/package.json
@@ -3,49 +3,34 @@
   "version": "1.0.0",
   "description": "unison backend",
   "scripts": {
-    "tsc": "tsc",
-    "watch-tsc": "tsc -w",
+    "build": "tsc",
     "deploy": "node dist/src/index.js",
-    "watch-deploy": "nodemon dist/src/index.js",
-    "server": "concurrently \"npm run watch-tsc\" \"npm run watch-deploy\"",
-    "start": "nodemon src/index.ts --exec ts-node",
-    "heroku-postbuild": "npm run tsc"
+    "start": "nodemon src/index.ts --exec ts-node"
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "bcryptjs": "^2.4.3",
-    "bs58": "^5.0.0",
-    "config": "^3.3.8",
     "cors": "^2.8.5",
     "cron": "^2.3.0",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-joi-validation": "^5.0.1",
-    "express-validator": "^6.14.2",
-    "gravatar": "^1.8.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "regenerator-runtime": "^0.13.11",
-    "request": "^2.88.2",
     "socket.io": "^4.6.1",
     "ts-node": "^10.9.1",
-    "tweetnacl": "^1.0.3",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/config": "3.3.0",
     "@types/cors": "^2.8.13",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.15",
-    "@types/gravatar": "^1.8.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
-    "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
   }
 }
