--- a/unison-backend/package.json
+++ b/unison-backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "unison backend",
   "scripts": {
-    "build": "tsc --target",
+    "build": "tsc",
     "deploy": "node dist/src/index.js",
     "start": "nodemon src/index.ts --exec ts-node"
   },
