--- a/unison-frontend/example.env
+++ b/unison-frontend/example.env
@@ -1,5 +1,5 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_API_URL=http://localhost:3001
 REACT_APP_BASE_URL=http://localhost:3000/
-REACT_APP_CLIENT_ID=1092728756109594674
-REACT_APP_CLIENT_SECRET=w28KAzLDg5a38PL4EAGl5Q0xZRJRDwuL
+REACT_APP_CLIENT_ID=
+REACT_APP_CLIENT_SECRET=
